fixed extra space and centered the template

--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ body {
   background-color: rgb(19, 24, 44);
 }
 
-
+.wrapper_box{
+  /* background-color: rgb(245, 93, 93); */
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
   /* heading */
 h1 {
@@ -47,6 +51,7 @@ h1 {
 
 /* CARDS DESIGN STARTS  */
 
+
 .image{
   padding: .5em;
   transition: 0.3s;
@@ -56,6 +61,7 @@ h1 {
 }
 
 .styles {
+  /* background-color: rgb(226, 135, 229); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,9 +71,13 @@ h1 {
   flex-wrap: wrap;
 }
 
-.stylebox {
+#cardd{
+  /* background-color: rgb(70, 131, 156); */
   display: flex;
-  flex-direction: column;
+}
+.stylebox {
+  display: block;
+  /* flex-direction: column; */
   justify-content: center;
   flex-wrap: wrap;
   overflow: hidden;
@@ -75,11 +85,13 @@ h1 {
   padding: .2rem;
   text-align: center;
   font-family: 'Bitter', sans-serif;
-  margin: 1.5rem;
+  margin: 1.5rem auto;
   border-radius: 5px;
   border: none;
   width: 20rem;
   transition: .2s;
+  /* margin-left: 4rem; */
+  text-align: center;
 }
 .stylebox:hover {
   
@@ -132,6 +144,48 @@ button{
   color: #fff;
 }
 
+
+
+@media screen  and (max-width:992px){
+  /* .stylebox{
+    margin:2rem 2rem;
+  } */
+ 
+}
+
+@media screen  and (max-width:849px){
+  .stylebox{
+    margin:2rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .styles {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 10vmin;
+  }
+  .stylebox {
+    padding: .3rem;
+    margin: 2rem auto;
+    width: 18rem;
+    margin-bottom: 1.5rem;
+  }
+  .stylebox .image {
+    overflow: hidden;
+    width: 17rem;
+    height: 12rem;
+    padding: 0;
+    margin: 0;
+    padding: .5em .5em 0 .5em;
+    border-radius: 0.5rem;
+    transition: .3s;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .styles {
     display: flex;
@@ -143,7 +197,7 @@ button{
   }
   .stylebox {
     padding: .3rem;
-    margin: auto;
+    margin: 2rem auto;
     width: 18rem;
     margin-bottom: 1.5rem;
   }
